# fling

./: .gitignore  .vercelignore  CHANGELOG.md  CREDIT.md  README.md  fling.yaml  namefinder.py  pyproject.toml  requirements.txt  tasks.py
api/: __init__.py  index.py  namefinder.py
fling/: lib.py
fling-api/: VERSION  api  core-requirements.txt  main.py  pyproject.toml  requirements.txt  vercel.json
fling-api/api/: __init__.py  github.py  index.py  namefinder.py
fling-api/fling_api/: __init__.py  index.py
fling-cli/: config.py  dev-requirements.txt  pyproject.toml  requirements.txt
fling-cli/fling_cli/: __init__.py  auth.py  logo-hc.txt
fling-cli/test/: test_commands.py
fling-client/: pyproject.toml
fling-client/fling_client/api/data/: read_data_fling_id_get.py
fling-client/fling_client/models/: __init__.py
fling-core/: pyproject.toml  requirements.txt  setup.py
fling-core/fling_core/: __init__.py  fling.yaml  github.py
fling-web/: CHANGELOG.md  core-requirements.txt  dev-requirements.txt  pyproject.toml  requirements.txt  vercel.json
fling-web/fling_web/: app.py
fling-web/fling_web/static/: style.css
fling-web/fling_web/templates/: all-flings.html  base.html  fling.html  flings.json  index.html
fling/fast_api_client/: types.py
fling/fast_api_client/api/root/: read_root_get.py
fling/fast_api_client/models/: __init__.py  http_validation_error.py  read_root_get_response_read_root_get.py  validation_error.py
fling/fling_client/api/names/: generate_names_namer_get.py
fling/fling_client/models/: __init__.py
fling/test/: test_commands.py
plugins/fling-plausible/: README.md  pyproject.toml
plugins/fling-plausible/fling_plausible/: __init__.py
scripts/: create_local_version.sh  poetry_build.sh  poetry_update.sh  projects.sh
web/: app.py
web/templates/: index.html
