[tool.poetry]
name = "fling-monorepo"
version = "0.1.0"
description = "Side Project Management from the command line"
authors = ["Joshua McKenty <jmckenty@gmail.com>", "Anouk Ruhaak <anoukruhaak@gmail.com>"]
readme = "README.md"
include = ["VERSION", "README.md"]
[tool.poetry.group.dev.dependencies]
black = "^23.3.0"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "VERSION",
    "pyproject.toml:^version",
    "fling-core/VERSION",
    "fling-core/pyproject.toml:^version",
    "fling-core/fling_core/__init__.py:^__version",
    "fling-api/VERSION",
    "fling-api/pyproject.toml:^version",
    "fling-api/api/__init__.py:^__version",
    "fling-cli/VERSION",
    "fling-cli/pyproject.toml:^version",
    "fling-cli/fling_cli/__init__.py:^__version",
    "fling-web/VERSION",
    "fling-web/pyproject.toml:^version",
    "fling-web/fling_web/__init__.py:^__version",
    "fling-client/VERSION",
    "fling-client/pyproject.toml:^version",
    "fling-client/fling_client/__init__.py:^__version",
    ]
update_changelog_on_bump = true
changelog_incremental = true
bump_message = "bump: $current_version → $new_version"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "*"
poetry = "*"
flake8 = "4.0.1"
dunamai = "^1.7.0"
commitizen = "^2.20.3"
openapi-python-client = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"