[tool.poetry]
name = "fling-api"
version = "0.1.0"
description = "Side Project Management API for Data Storage and Name Searches"
authors = ["Joshua McKenty <jmckenty@gmail.com>", "Anouk Ruhaak <anoukruhaak@gmail.com>"]
readme = "README.md"
packages = [{include = "api"}]

[tool.poetry.dependencies]
openai = "*"
python-dotenv = "*"
fastapi = "*"
uvicorn = "*"
boto3 = "*"
python = "^3.10"
fling-core = {path="../fling-core", develop=true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"