[tool.poetry]
name = "fling-cli"
version = "0.0.0.post39.dev0+efaa906"
description = "Side Project Management from the command line"
authors = ["Joshua McKenty <jmckenty@gmail.com>", "Anouk Ruhaak <anoukruhaak@gmail.com>"]
readme = "README.md"
packages = [{include = "fling_cli"}]

[tool.poetry.dependencies]
click = "*"
python-dotenv = "*"
cookiecutter = "*"
rich-click = "*"
python = "^3.10"
fling-client = {path="../fling-client", develop=true}
fling-core = {path="../fling-core", develop=true}
keyring = "^23.13.1"
requests-oauthlib = "^1.3.1"

[tool.poetry.scripts]
fling = "fling_cli.bin.fling:fling"
git-fling = "fling_cli.bin.fling:fling"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"