[tool.poetry]
name = "fling-core"
version = "0.1.0"
description = "Fling core components for Side Project Management"
authors = ["Joshua McKenty <jmckenty@gmail.com>", "Anouk Ruhaak <anoukruhaak@gmail.com>"]
readme = "README.md"
packages = [{include = "fling_core"}]

[tool.poetry.dependencies]
python-dotenv = "*"
dynaconf = "*"
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"