[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fling-web"
version = "0.1.0"
description = "Side Project Management from the command line"
authors = ["Joshua McKenty <jmckenty@gmail.com>", "Anouk Ruhaak <anoukruhaak@gmail.com>"]
readme = "README.md"
include = ["VERSION", "templates"]
packages = [{include = "fling_web"}]


[tool.poetry.dependencies]
flask = "*"
boto3 = "*"
python = "^3.10"